// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
        aria-label=" "
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radioboxesfield"
        id="react-aria-react-useId-mock"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_1"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«r1» react-aria-react-useId-mock"
                aria-labelledby="«r0»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="1"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaRocket"
            >
              FaRocket
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«r0»"
              >
                option 1
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                Neutral element for multiplication.
              </span>
            </div>
          </label>
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_2"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«r3» react-aria-react-useId-mock"
                aria-labelledby="«r2»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="2"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaFlask"
            >
              FaFlask
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«r2»"
              >
                option 2
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                The number for Nerds.
              </span>
            </div>
          </label>
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_3"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«r5» react-aria-react-useId-mock"
                aria-labelledby="«r4»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="3"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaPhone"
            >
              FaPhone
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«r4»"
              >
                option 3
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                first prime number to be devisable by something other than 1.
              </span>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > DisabledCompletely 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
        aria-label=" "
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radioboxesfield"
        id="react-aria-react-useId-mock"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4 opacity-disabled pointer-events-none"
            data-disabled="true"
            data-testid="radioboxesfield_option_1"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«rj» react-aria-react-useId-mock"
                aria-labelledby="«ri»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                disabled=""
                name="radioBoxesField"
                type="radio"
                value="1"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaRocket"
            >
              FaRocket
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«ri»"
              >
                option 1
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                Neutral element for multiplication.
              </span>
            </div>
          </label>
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4 opacity-disabled pointer-events-none"
            data-disabled="true"
            data-testid="radioboxesfield_option_2"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«rl» react-aria-react-useId-mock"
                aria-labelledby="«rk»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                disabled=""
                name="radioBoxesField"
                type="radio"
                value="2"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaFlask"
            >
              FaFlask
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«rk»"
              >
                option 2
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                The number for Nerds.
              </span>
            </div>
          </label>
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4 opacity-disabled pointer-events-none"
            data-disabled="true"
            data-testid="radioboxesfield_option_3"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«rn» react-aria-react-useId-mock"
                aria-labelledby="«rm»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                disabled=""
                name="radioBoxesField"
                type="radio"
                value="3"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaPhone"
            >
              FaPhone
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«rm»"
              >
                option 3
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                first prime number to be devisable by something other than 1.
              </span>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > DisabledOption 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
        aria-label=" "
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radioboxesfield"
        id="react-aria-react-useId-mock"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_1"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«rp» react-aria-react-useId-mock"
                aria-labelledby="«ro»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="1"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaRocket"
            >
              FaRocket
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«ro»"
              >
                option 1
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                Neutral element for multiplication.
              </span>
            </div>
          </label>
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4 opacity-disabled pointer-events-none"
            data-disabled="true"
            data-testid="radioboxesfield_option_2"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«rr» react-aria-react-useId-mock"
                aria-labelledby="«rq»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                disabled=""
                name="radioBoxesField"
                type="radio"
                value="2"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaFlask"
            >
              FaFlask
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«rq»"
              >
                option 2
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                The number for Nerds.
              </span>
            </div>
          </label>
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_3"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«rt» react-aria-react-useId-mock"
                aria-labelledby="«rs»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="3"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaPhone"
            >
              FaPhone
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«rs»"
              >
                option 3
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                first prime number to be devisable by something other than 1.
              </span>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Inline 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
        aria-label=" "
        aria-orientation="horizontal"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radioboxesfield"
        id="react-aria-react-useId-mock"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="horizontal"
          role="presentation"
        >
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_1"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«r7» react-aria-react-useId-mock"
                aria-labelledby="«r6»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="1"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaRocket"
            >
              FaRocket
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«r6»"
              >
                option 1
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                Neutral element for multiplication.
              </span>
            </div>
          </label>
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_2"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«r9» react-aria-react-useId-mock"
                aria-labelledby="«r8»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="2"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaFlask"
            >
              FaFlask
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«r8»"
              >
                option 2
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                The number for Nerds.
              </span>
            </div>
          </label>
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_3"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«rb» react-aria-react-useId-mock"
                aria-labelledby="«ra»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="3"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaPhone"
            >
              FaPhone
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«ra»"
              >
                option 3
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                first prime number to be devisable by something other than 1.
              </span>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Invalid 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
        aria-invalid="true"
        aria-label=" "
        aria-orientation="vertical"
        aria-required="true"
        class="relative flex flex-col group gap-0"
        data-invalid="true"
        data-required="true"
        data-testid="radioboxesfield"
        id="react-aria-react-useId-mock"
        role="radiogroup"
      >
        <span
          class="relative after:content-['*'] after:text-danger after:ml-0.5 text-foreground group-data-[invalid=true]:text-danger mb-2 inline-flex text-sm subpixel-antialiased"
        >
          <legend>
            radioBoxesField
          </legend>
        </span>
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            aria-required="true"
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-invalid="true"
            data-testid="radioboxesfield_option_one"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«r15» react-aria-react-useId-mock react-aria-react-useId-mock"
                aria-labelledby="«r14»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="-1"
                title=""
                type="radio"
                value="one"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background w-5 h-5 border-danger group-data-[selected=true]:border-danger group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 w-2 h-2 text-danger-foreground transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaRocket"
            >
              FaRocket
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-danger transition-colors motion-reduce:transition-none text-sm"
                id="«r14»"
              >
                option 1
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                Neutral element for multiplication.
              </span>
            </div>
          </label>
          <label
            aria-required="true"
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-focus="true"
            data-hover="true"
            data-invalid="true"
            data-selected="true"
            data-testid="radioboxesfield_option_two"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«r17» react-aria-react-useId-mock react-aria-react-useId-mock"
                aria-labelledby="«r16»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="0"
                title=""
                type="radio"
                value="two"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background w-5 h-5 border-danger group-data-[selected=true]:border-danger group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 w-2 h-2 text-danger-foreground transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaFlask"
            >
              FaFlask
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-danger transition-colors motion-reduce:transition-none text-sm"
                id="«r16»"
              >
                option 2
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                The number for Nerds.
              </span>
            </div>
          </label>
          <label
            aria-required="true"
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-invalid="true"
            data-testid="radioboxesfield_option_three"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«r19» react-aria-react-useId-mock react-aria-react-useId-mock"
                aria-labelledby="«r18»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="-1"
                title=""
                type="radio"
                value="three"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background w-5 h-5 border-danger group-data-[selected=true]:border-danger group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 w-2 h-2 text-danger-foreground transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaPhone"
            >
              FaPhone
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-danger transition-colors motion-reduce:transition-none text-sm"
                id="«r18»"
              >
                option 3
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                first prime number to be devisable by something other than 1.
              </span>
            </div>
          </label>
        </div>
        <div
          class="text-tiny text-danger"
          id="react-aria-react-useId-mock"
        >
          <ul
            aria-label="Validation errors of field radioboxesfield"
            data-testid="radioboxesfield_error"
          >
            <li
              style="overflow: hidden;"
            >
              <span
                class="p-1"
              >
                Please use another option
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Required 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
        aria-label=" "
        aria-orientation="vertical"
        aria-required="true"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="true"
        data-testid="radioboxesfield"
        id="react-aria-react-useId-mock"
        role="radiogroup"
      >
        <span
          class="relative after:content-['*'] after:text-danger after:ml-0.5 text-foreground group-data-[invalid=true]:text-danger mb-2 inline-flex text-sm subpixel-antialiased"
        >
          <legend>
            radioBoxesField
          </legend>
        </span>
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            aria-required="true"
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_1"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«rv» react-aria-react-useId-mock"
                aria-labelledby="«ru»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="0"
                title=""
                type="radio"
                value="1"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaRocket"
            >
              FaRocket
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«ru»"
              >
                option 1
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                Neutral element for multiplication.
              </span>
            </div>
          </label>
          <label
            aria-required="true"
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_2"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«r11» react-aria-react-useId-mock"
                aria-labelledby="«r10»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="0"
                title=""
                type="radio"
                value="2"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaFlask"
            >
              FaFlask
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«r10»"
              >
                option 2
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                The number for Nerds.
              </span>
            </div>
          </label>
          <label
            aria-required="true"
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_3"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«r13» react-aria-react-useId-mock"
                aria-labelledby="«r12»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="0"
                title=""
                type="radio"
                value="3"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaPhone"
            >
              FaPhone
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«r12»"
              >
                option 3
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                first prime number to be devisable by something other than 1.
              </span>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithInitialValue 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
        aria-label=" "
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radioboxesfield"
        id="react-aria-react-useId-mock"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_1"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«rd» react-aria-react-useId-mock"
                aria-labelledby="«rc»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="-1"
                title=""
                type="radio"
                value="1"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaRocket"
            >
              FaRocket
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«rc»"
              >
                option 1
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                Neutral element for multiplication.
              </span>
            </div>
          </label>
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-testid="radioboxesfield_option_2"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«rf» react-aria-react-useId-mock"
                aria-labelledby="«re»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="-1"
                title=""
                type="radio"
                value="2"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaFlask"
            >
              FaFlask
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«re»"
              >
                option 2
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                The number for Nerds.
              </span>
            </div>
          </label>
          <label
            class="group border-default hover:bg-content2 data-[selected=true]:border-focus inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 p-4"
            data-selected="true"
            data-testid="radioboxesfield_option_3"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«rh» react-aria-react-useId-mock"
                aria-labelledby="«rg»"
                checked=""
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="3"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none group-data-[invalid=true]:!border-danger [&:not(group-data-[invalid="true"]):not(group-data-[selected="false"])]:border-focus"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none bg-focus group-data-[invalid=true]:bg-danger"
              />
            </span>
            <span
              data-testid="icon-FaPhone"
            >
              FaPhone
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative text-foreground select-none transition-colors motion-reduce:transition-none text-sm"
                id="«rg»"
              >
                option 3
              </span>
              <span
                class="text-small text-foreground opacity-70"
              >
                first prime number to be devisable by something other than 1.
              </span>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
